--- a/sf-admin/login.html
+++ b/sf-admin/login.html
@@ -72,7 +72,7 @@
 			// 所有参考属性  
 			var page_title = 'sa-快速开发平台';		// 页面标题 
 			var key = 'sa';						// 默认的key 
-			var password = 'admin';					// 默认的password  
+			var password = '123456';					// 默认的password  
 			var logo_url = 'sa-resources/admin-logo.png';	// logo地址，为空字符串则不显示 
 			
 			// 点击登录按钮 
