--- a/sf-apidoc/index.html
+++ b/sf-apidoc/index.html
@@ -25,7 +25,8 @@
 			// 一些配置 
 			window.$docsify = {
 				name: name, // 名字 
-				basePath: '/sf-apidoc/', // 项目名，如果部署时带路径上下文，则必须写这个   
+				// basePath: '/sf-apidoc/', // 项目名，如果部署时带路径上下文，则必须写这个   
+				basePath: location.pathname.substr(0, location.pathname.lastIndexOf('/') + 1),	// 自动计算项目名字 
 				// themeColor: '#06A3D7', // 主题颜色  
 				repo: 'https://github.com/click33/sa-doc', // github地址 
 				auto2top: true, // 是否在切换页面后回到顶部 
