--- a/sf-admin/sa-html-sf/sf-apilog/api-log-list.html
+++ b/sf-admin/sa-html-sf/sf-apilog/api-log-list.html
@@ -12,6 +12,18 @@
 		<script src="https://unpkg.com/jquery@3.4.1/dist/jquery.js"></script>
 		<script src="https://www.layuicdn.com/layer-v3.1.1/layer.js"></script>
 		<script src="../../static/sa.js"></script>
+		<style>
+			.req-type-box{color: #FFF;}
+			.req-type-box b{padding: 3px 7px; border-radius: 3px; font-size: 12px;}
+			/* .req-api span{background-color: ; color: #409EFF; border: 1px #409EFF solid; border-radius: 2px; padding: 3px 5px;} */
+			.req-api span{color: #44f; font-weight: 700; margin-left: 3px;}
+			.req-p{display: inline-block; line-height: 1.4; padding: 2px 4px; border-radius: 4px; cursor: pointer;}
+			.req-p{background-color: #fff2f4; color: #c7254e;}
+			.req-ip{background-color: ; color: #409EFF; border: 1px #409EFF solid; border-radius: 2px; padding: 3px 5px;}
+			
+			.req-string{line-height: 1.4; padding: 2px 4px; border-radius: 4px;cursor: pointer; background-color: #ECF5FF;}
+			
+		</style>
 	</head>
 	<body>
 		<div style="margin-top: -1em;" title="防止margin向下击穿"><br></div>
@@ -23,8 +35,8 @@
 					<el-form-item label="记录id：">
 						<el-input v-model="p.id"></el-input>
 					</el-form-item>
-					<el-form-item label="请求id：">
-						<el-input v-model="p.req_id"></el-input>
+					<el-form-item label="请求ip：">
+						<el-input v-model="p.req_ip"></el-input>
 					</el-form-item>
 					<el-form-item label="请求api：">
 						<el-input v-model="p.req_api"></el-input>
@@ -43,8 +55,8 @@
 						<el-input v-model="p.admin_id"></el-input>
 					</el-form-item>
 					<br>
-					<el-form-item label="请求ip：">
-						<el-input v-model="p.req_ip"></el-input>
+					<el-form-item label="请求token：">
+						<el-input v-model="p.req_token"></el-input>
 					</el-form-item>
 					<el-form-item label="请求时间：">
 						<el-date-picker v-model="p.s_time" type="datetime" value-format="yyyy-MM-dd HH:mm:ss" placeholder="开始日期"></el-date-picker> - 
@@ -63,26 +75,50 @@
 				<div class="c-title">数据列表</div>
 				<el-table :data="dataList" size="mini">
 					<el-table-column label="记录id" prop="id" width="80px" ></el-table-column>
-					<el-table-column label="请求id" width="200px">
+					<el-table-column label="请求ip" width="100px">
 						<template slot-scope="s">
-							<div style="width: 150px;">{{s.row.req_id}}</div>
+							<span class="req-ip">{{(s.row.req_ip)}}</span>
 						</template>
-					</el-table-column>>
+					</el-table-column>
+					<el-table-column label="请求方式" width="100px">
+						<template slot-scope="s">
+							<span class="req-type-box">
+								<b style="background-color: #00A65A;" v-if=" s.row.req_type == 'GET' ">GET</b>
+								<b style="background-color: #0073B7;" v-else-if=" s.row.req_type == 'POST' ">POST</b>
+								<b style="background-color: #FF6A00;" v-else>{{s.row.req_type}}</b>
+							</span>
+						</template>
+					</el-table-column>
 					<el-table-column label="请求接口" width="250px">
 						<template slot-scope="s">
-							<p style="color: #44f;">
-								{{sa.maxLength(s.row.req_api)}}
-								<b style="color: #333; margin-left: 5px;">{{s.row.req_type}}</b>
-							</p>
-							<p>{{sa.maxLength(s.row.req_parame)}}</p>
+							<p class="req-api"><span>{{sa.maxLength(s.row.req_api)}}</bspan></p>
+							<span class="req-p" @click="sa.msg(s.row.req_parame)">{{sa.maxLength(s.row.req_parame, 70)}}</span>
 						</template>
-					</el-table-column>>
-					<el-table-column label="请求返回" width="370px">
+					</el-table-column>
+					<el-table-column label="请求返回" min-width="370px">
 						<template slot-scope="s">
-							<p><b>{{s.row.res_code}}</b> - {{s.row.res_msg}}</p>
-							<p>{{sa.maxLength(s.row.res_string, 60)}}</p>
+							<p style="padding-left: 3px;">
+								<b style="color: green;" v-if="s.row.res_code == 200">{{s.row.res_code}} - {{s.row.res_msg}}</b>
+								<b style="color: red;" v-else>{{s.row.res_code}} - {{s.row.res_msg}}</b>
+							</p>
+							<p class="req-string" @click="sa.msg(s.row.res_string)">
+								{{sa.maxLength(s.row.res_string, 80)}}
+							</p>
 						</template>
-					</el-table-column>>
+					</el-table-column>
+					<el-table-column label="请求账号" width="150px">
+						<template slot-scope="s">
+							<p v-if="s.row.user_id == 0">user_id：&nbsp;&nbsp;&nbsp;0</p>
+							<p v-else>user_id：&nbsp;&nbsp;&nbsp;<el-link @click="sa.alert(s.row.user_id)">{{s.row.user_id}}</el-link></p>
+							<p v-if="s.row.admin_id == 0">admin_id：0</p>
+							<p v-else>admin_id：<el-link @click="sa.$page.openAdminInfo(s.row.admin_id)">{{s.row.admin_id}}</el-link></p>
+						</template>
+					</el-table-column>
+					<el-table-column label="请求token" width="150px" v-if="!sa.isNull(p.req_token) ">
+						<template slot-scope="s">
+							<div style="width: 130px;">{{s.row.req_token}}</div>
+						</template>
+					</el-table-column>
 					<el-table-column label="请求时间" width="280px">
 						<template slot-scope="s">
 							<p>
@@ -95,18 +131,6 @@
 							</p>
 						</template>
 					</el-table-column>
-					<!-- <el-table-column label="请求耗时">
-						<template slot-scope="s">
-							<b style="color: green;">{{(s.row.cost_time + 0.0) / 1000}}s</b>
-						</template>
-					</el-table-column>> -->
-					<el-table-column label="请求账号" width="150px">
-						<template slot-scope="s">
-							<p>user_id：&nbsp;&nbsp;&nbsp;{{s.row.user_id}}</p>
-							<p>admin_id：{{s.row.admin_id}}</p>
-						</template>
-					</el-table-column>>
-					<el-table-column label="请求ip" prop="req_ip" ></el-table-column>
 					<el-table-column label="操作" width="120px" >
 						<template slot-scope="s">
 							<el-button type="text" size="mini" @click="copy(s.row)">复制</el-button>
@@ -137,7 +161,7 @@
 						pageNo: 1,
 						pageSize: 10,
 						id: '',
-						req_id: '',
+						req_token: '',
 						req_ip: '',
 						req_api: '',
 						res_code: '',
