新增智能生成代码

--- a/sf-devdoc/index.html
+++ b/sf-devdoc/index.html
@@ -13,6 +13,8 @@
 			body{background-color: #FFF;}
 			.s-width{width: 1000px; margin: auto;}
 			li{line-height: 28px;}
+			pre{overflow: auto;}
+			#md-content img{max-width: 800px;}
 		</style>
 	</head>
 	<body>
