--- a/sf-devdoc/index.html
+++ b/sf-devdoc/index.html
@@ -40,7 +40,10 @@
 		<div class="s-header">
 			<div class="s-header-content s-width">
 				<a href="index.html">
-					<div class="logo-box">sa-fast 快速开发</div>
+					<div class="logo-box">
+						sa-fast 快速开发 
+						<span style="font-size: 0.7em; font-weight: 400;"> v1.4.0 更新于2020-5-15</span>
+					</div>
 				</a>
 				<div class="nav-box">
 					<a href="#mao-header" class="mao-href">介绍</a>
