--- a/sf-devdoc/bg.html
+++ b/sf-devdoc/bg.html
@@ -12,7 +12,7 @@
 				overflow: hidden;
 			}
 		</style>
-		<script src="https://unpkg.com/three@0.116.1/build/three.js"></script>
+		<script src="https://unpkg.com/three@0.116.1/build/three.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/TweenMax.min.js"></script>
 	</head>
 	<body>
