--- a/sf-devdoc/bg.html
+++ b/sf-devdoc/bg.html
@@ -10,6 +10,7 @@
 				padding: 0;
 				background: black;
 				overflow: hidden;
+				/* background-color: #000; */
 			}
 		</style>
 		<script src="https://unpkg.com/three@0.116.1/build/three.min.js"></script>
