--- a/sf-devdoc/index.html
+++ b/sf-devdoc/index.html
@@ -42,7 +42,7 @@
 				<a href="index.html">
 					<div class="logo-box">
 						sa-fast 快速开发 
-						<span style="font-size: 0.7em; font-weight: 400;"> v1.8.0 更新于2020-6-1</span>
+						<span style="font-size: 0.7em; font-weight: 400;"> v1.9.0 更新于2020-6-15</span>
 					</div>
 				</a>
 				<div class="nav-box">
@@ -75,7 +75,7 @@
 		<style type="text/css">
 			/*  */
 			.top-box{width: 100wh; height: 100vh; border: 0px #000 solid; position: relative;}
-			.bg-box{width: 100%; height: 100%; border: 0px;}
+			.bg-box{width: 100%; height: 100%; border: 0px; background-color: #000;}
 			
 			.s-poster{position: absolute; top: 0px; pointer-events: none;}
 			.s-poster{border: 0px #000 solid; width: 100%; height: 100%; display: flex; align-items: center; }
