--- a/sf-admin/sa-html-sf/sf-cfg/server-cfg.html
+++ b/sf-admin/sa-html-sf/sf-cfg/server-cfg.html
@@ -40,7 +40,7 @@
 				<el-tabs class="s-tab" v-model="activeTab">
 					<!-- ---------------------------------- 系统参数 ---------------------------------- -->
 					<el-tab-pane label="系统参数" name="tab1">
-						<div class="c-item">
+						<div class="c-item br">
 							<label class="c-label">预留信息：</label>
 							<el-input size="mini" v-model="m.reserve_info"></el-input>
 						</div>
