--- a/sf-devdoc/index.html
+++ b/sf-devdoc/index.html
@@ -42,7 +42,7 @@
 				<a href="index.html">
 					<div class="logo-box">
 						sa-fast 快速开发 
-						<span style="font-size: 0.7em; font-weight: 400;"> v1.9.0 更新于2020-6-15</span>
+						<span style="font-size: 0.7em; font-weight: 400;"> v2.0.0 更新于2020-6-15</span>
 					</div>
 				</a>
 				<div class="nav-box">
@@ -107,6 +107,9 @@
 								</a>
 							</div> -->
 							<div class="ws-btn-box">
+								<a href="https://gitee.com/sz6/sa-fast" target="_blank">
+									<button class="ws-btn s-p-y">Gitee仓库</button>
+								</a>
 								<a href="https://github.com/click33/sa-fast" target="_blank">
 									<button class="ws-btn s-p-y">GitHub仓库</button>
 								</a>
