--- a/sf-devdoc/index.html
+++ b/sf-devdoc/index.html
@@ -14,7 +14,6 @@
 			.s-width{width: 1000px; margin: auto;}
 			li{line-height: 28px;}
 			pre{overflow: auto;}
-			#md-content img{max-width: 800px;}
 		</style>
 	</head>
 	<body>
@@ -42,7 +41,7 @@
 				<a href="index.html">
 					<div class="logo-box">
 						sa-fast 快速开发 
-						<span style="font-size: 0.7em; font-weight: 400;"> v2.1.0 更新于2020-6-18</span>
+						<span style="font-size: 0.7em; font-weight: 400;"> 1.12.0 更新于2020-6-22</span>
 					</div>
 				</a>
 				<div class="nav-box">
@@ -130,6 +129,9 @@
 			pre{background-color: #282C34; padding: 1em; color: #98C363;}
 			blockquote{margin-left: 0px; padding: 0.1em 0em; border-left: 4px #aaa solid; background-color: #CCC;}
 			button{cursor: pointer;}
+			/* 图片 */
+			#md-content img{max-width: 100%; margin: 0.5em; box-shadow: 0 0 0px #999; transition: all 0.3s;}
+			#md-content img:hover{box-shadow: 0 0 10px #333; cursor: pointer;}
 		</style>
 		<div id="mao-doc" style="position: relative; top: -80px;"></div>
 		<div style="height: 20px;"></div>
@@ -174,6 +176,13 @@
 				$('html, body').animate({
 					scrollTop: $($.attr(this, 'href')).offset().top
 				}, 500);
+				return false;
+			});
+		</script>
+		<!-- img点击放大 -->
+		<script type="text/javascript">
+			$('#md-content').on('click', 'img', function(){
+				open(this.src);
 				return false;
 			});
 		</script>
