集成需求墙

--- a/sf-devdoc/index.html
+++ b/sf-devdoc/index.html
@@ -1,6 +1,5 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 	<head>
 		<meta charset="utf-8">
 		<title>sa-fast快速开发平台</title>
@@ -50,6 +49,7 @@
 					<a href="#mao-header" class="mao-href">首页</a>
 					<a href="#mao-doc" class="mao-href">介绍</a>
 					<a href="./doc/index.html" target="_blank">在线文档</a>
+					<a href="http://sa-app.dev33.cn/wall.html?name=sa-fast" target="_blank">需求墙</a>
 					<a href="#foot" class="mao-href">关于</a>
 				</div>
 				<!-- <a href="#foot" style="float: right; line-height: 50px; color: #FFF;">QQ群</a> -->
@@ -85,8 +85,8 @@
 			.s-p-y{pointer-events: auto;}
 			/* 按钮 */
 			.ws-btn-box{margin-right: 8px; text-align: center; display: inline-block;}
-			.ws-btn-box a{margin: 0 16px; text-decoration: none;}
-			.ws-btn{font-size: 1.4em; padding: 0.6em 1em; background-color: rgba(0,0,0,0); border: 1px #FFF solid; color: #FFF; cursor: pointer;}
+			.ws-btn-box a{margin: 0 10px; text-decoration: none;}
+			.ws-btn{font-size: 1.4em; padding: 0 1em; height: 58px; line-height: 58px; background-color: rgba(0,0,0,0); border: 1px #FFF solid; color: #FFF; cursor: pointer;}
 			.ws-btn{border-radius: 3px; box-shadow: 0 0 10px rgba(200,200,200,0.3); background-color: rgba(0,0,0,0.3);}
 			.ws-btn:hover{color: #FFF; border: 1px #FFF solid; background-color: rgba(0,0,0,0.6);}
 		</style>
@@ -107,13 +107,16 @@
 							</div> -->
 							<div class="ws-btn-box">
 								<a href="https://github.com/click33/sa-fast" target="_blank">
-									<button class="ws-btn s-p-y">GitHub仓库</button>
+									<button class="ws-btn s-p-y">GitHub</button>
 								</a>
 								<a href="https://gitee.com/sz6/sa-fast" target="_blank">
-									<button class="ws-btn s-p-y">Gitee仓库</button>
+									<button class="ws-btn s-p-y">Gitee</button>
+								</a>
+								<a href="http://sa-app.dev33.cn/wall.html?name=sa-fast" target="_blank">
+									<button class="ws-btn s-p-y">需求墙</button>
 								</a>
 								<a href="./doc/index.html" target="_blank">
-									<button class="ws-btn s-p-y">开始 - 在线文档</button>
+									<button class="ws-btn s-p-y">在线文档</button>
 								</a>
 							</div>
 						</div>
