--- a/sf-apidoc/index.html
+++ b/sf-apidoc/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 	<head>
 		<title>sa-doc接口文档</title>
 		<meta charset="UTF-8">
@@ -29,6 +29,7 @@
 			// 全局配置 
 			window.sa_doc_cfg = {
 				server_url: 'http://127.0.0.1:8099',	// 接口测试总地址 
+				// server_url: 'http://127.0.0.1:8099',	// 接口测试总地址 
 			}
 			
 			// 文档标题
