--- a/sf-devdoc/index.html
+++ b/sf-devdoc/index.html
@@ -40,7 +40,7 @@
 				<a href="index.html">
 					<div class="logo-box">
 						sa-fast 快速开发 
-						<span style="font-size: 0.7em; font-weight: 400;"> 1.14.0 更新于2020-8-19</span>
+						<span style="font-size: 0.7em; font-weight: 400;"> v1.14.0 更新于2020-8-19</span>
 					</div>
 				</a>
 				<div class="nav-box">
@@ -188,6 +188,11 @@
 				open(this.src);
 				return false;
 			});
+		</script>
+		
+		<!-- 仓库转移 -->
+		<script type="text/javascript">
+			layer.alert('<h2>本框架代码已转移，请移步最新地址：<a href="http://sa-plus.dev33.cn/" target="_blank">http://sa-plus.dev33.cn/</h2>');
 		</script>
 		
 	</body>
